--- a/apps/admin/src/app/app.component.html
+++ b/apps/admin/src/app/app.component.html
@@ -1,2 +1,2 @@
-<katalina.dev-nx-welcome></katalina.dev-nx-welcome>
+<katalina-dev-nx-welcome></katalina-dev-nx-welcome>
 <router-outlet></router-outlet>
